// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidget05.vue matches custom props snapshot 1`] = `
<div
  class="card text-white bg-info"
>
  <div
    class="card-body"
  >
    <div
      class="h1 text-muted text-right mb-4"
    >
      <i
        class="icon-custom"
      />
    </div>
     
    <div
      class="h4 mb-0"
    >
      test
    </div>
     
    <small
      class="text-muted text-uppercase font-weight-bold"
    >
      test
    </small>
     
    <div
      class="progress-xs my-3 mb-0 progress progress-white"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="35"
        class="progress-bar"
        role="progressbar"
        style="width: 35%;"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`CWidget05.vue matches default props snapshot 1`] = `
<div
  class="card"
>
  <div
    class="card-body"
  >
    <div
      class="h1 text-muted text-right mb-4"
    >
      <i
        class="icon-people"
      />
    </div>
     
    <div
      class="h4 mb-0"
    >
      header:string
    </div>
     
    <small
      class="text-muted text-uppercase font-weight-bold"
    >
      text:string
    </small>
     
    <div
      class="progress-xs my-3 mb-0 progress"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        class="progress-bar"
        role="progressbar"
        style="width: 25%;"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;
